--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-% Created 2024-08-17 Sat 19:43
-=======
-% Created 2024-08-09 Fri 10:39
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
+% Created 2024-08-18 Sun 15:53
 % Intended LaTeX compiler: lualatex
 \documentclass[presentation,professionalfonts,aspectratio=169]{beamer}
                 
@@ -161,17 +157,10 @@ title=#2,#1}
 \usetheme{minflat}
 \author{Fábio Lima}
 \date{}
-<<<<<<< HEAD
 \title{Reações Orgânicas}
 \hypersetup{
  pdfauthor={Fábio Lima},
  pdftitle={Reações Orgânicas},
-=======
-\title{Hidrocarbonetos II}
-\hypersetup{
- pdfauthor={Fábio Lima},
- pdftitle={Hidrocarbonetos II},
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
  pdfkeywords={},
  pdfsubject={},
  pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
@@ -187,10 +176,9 @@ title=#2,#1}
 \end{frame}
 
 
-<<<<<<< HEAD
 \section{Reações Orgânicas}
-\label{sec:org900f9ed}
-\begin{frame}[label={sec:org502dc3f}]{Reações Orgânicas}
+\label{sec:orgf15e8e9}
+\begin{frame}[label={sec:org3ad96f8}]{Reações Orgânicas}
 Reações orgânicas são formas de transformação de moléculas orgânicas em outras moléculas orgânicas. São tipos de reações orgânicas:
 \begin{itemize}
 \item Reações de adição
@@ -202,9 +190,9 @@ Reações orgânicas são formas de transformação de moléculas orgânicas em 
 \end{frame}
 
 \section{Alcanos}
-\label{sec:org3b1a34e}
+\label{sec:orgd5a26bb}
 
-\begin{frame}[label={sec:org9525017}]{Alcanos}
+\begin{frame}[label={sec:orgff4c293}]{Alcanos}
 \begin{itemize}
 \item Carbono e hidrogênio têm eletronegatividades bem semelhantes, logo, a ligação C - H é basicamente apolar.
 \item Conseqüentemente, compostos contendo ligações C - C e C - H são estáveis e apresentam uma tendência muito baixa para reagir com outras substâncias.
@@ -213,7 +201,7 @@ Reações orgânicas são formas de transformação de moléculas orgânicas em 
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3d4e81e}]{Formação de Radicais}
+\begin{frame}[label={sec:org76c43df}]{Formação de Radicais}
 \alert{Radicais:} espécies químicas que apresentam um elétron desemparelhado.
 
 \begin{reaction}
@@ -228,7 +216,7 @@ Reações orgânicas são formas de transformação de moléculas orgânicas em 
 \end{bclogo}
 \end{frame}
 
-\begin{frame}[label={sec:org0eb0b66}]{Halogenação}
+\begin{frame}[label={sec:orgc1e6b56}]{Halogenação}
 \begin{itemize}
 \item Sob condições adequadas sofrem reação de substituição com halogênios.
 \item A substituição de um \alert{H} por um halogênio é denominada \alert{halogenação}.
@@ -244,7 +232,7 @@ CH4 + C$\ell$2(excesso) ->[$\Delta$ ou][h$\nu$] CH3C$\ell$ + CH2C$\ell$2 + CHC$\
 \end{frame}
 
 
-\begin{frame}[label={sec:org7813eb5}]{}
+\begin{frame}[label={sec:org81f8984}]{}
 \begin{bclogo}[couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Mecanismo de cloração do Metano}
 
   \begin{empheq}[left=\text{Inicia\c{c}\~{a}o}\quad\; \empheqlbrace]{flalign} 
@@ -266,7 +254,7 @@ CH4 + C$\ell$2(excesso) ->[$\Delta$ ou][h$\nu$] CH3C$\ell$ + CH2C$\ell$2 + CHC$\
 \end{empheq}
 \end{bclogo}
 \end{frame}
-\begin{frame}[label={sec:org4532204}]{}
+\begin{frame}[label={sec:org47d13c6}]{}
 \begin{itemize}
 \item Todos os outros alcanos reagem com os \alert{halogênios} da mesma maneira que o metano.
 \item Quanto maior o número de carbonos, maior será o número de possíveis compostos mono e polialogenados formados.
@@ -284,7 +272,7 @@ CH4 + C$\ell$2(excesso) ->[$\Delta$ ou][h$\nu$] CH3C$\ell$ + CH2C$\ell$2 + CHC$\
 
 
 
-\begin{frame}[label={sec:org4b2ed5f}]{Oxidação}
+\begin{frame}[label={sec:orgd298ae7}]{Oxidação}
 Os \alert{alcanos} e outros \alert{hidrocarbonetos} queimam na presença \ch{O2}, sendo tal reação de oxidação denominada
 \alert{combustão}.
 
@@ -301,7 +289,7 @@ Os \alert{alcanos} e outros \alert{hidrocarbonetos} queimam na presença \ch{O2}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgea7d672}]{Reação de pirólise}
+\begin{frame}[label={sec:orgc063fc6}]{Reação de pirólise}
 \begin{itemize}
 \item \alert{Pirólise} é um tipo de reação de decomposição ou análise, em que uma substância é decomposta em outras, pela ação do calor do fogo.
 \end{itemize}
@@ -334,7 +322,7 @@ Os \alert{alcanos} e outros \alert{hidrocarbonetos} queimam na presença \ch{O2}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc2b530b}]{Reação de isomerização}
+\begin{frame}[label={sec:org35fc3a2}]{Reação de isomerização}
 \begin{bclogo}[couleur=blue!40 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Isomerização dos alcanos}
 
 
@@ -362,560 +350,17 @@ Os \alert{alcanos} e outros \alert{hidrocarbonetos} queimam na presença \ch{O2}
 
 
 \section{Alcenos}
-\label{sec:org546413b}
+\label{sec:orgeaf5865}
 
-\begin{frame}[label={sec:orgc09caa0}]{Reação de adição}
+\begin{frame}[label={sec:org4934021}]{Reação de adição}
 \begin{itemize}
 \item Os alcenos participam de reações de adição, nas quais os fragmentos da quebra de pequenas moléculas, tais como, \ch{H2}, \ch{C$\ell$2}, \ch{HC$\ell$} e \ch{H2O}, se adicionam aos carbonos que estabeleciam ligação dupla e que após a reação, passam a estabelecer ligação simples.
-=======
-
-
-\section{Hidrocarbonetos Ramificados}
-\label{sec:org7a86015}
-
-\begin{frame}[label={sec:orgea5b104}]{Hidrocarbonetos Ramificados}
-\begin{myex}{Ramificação}
-\begin{itemize}
-\item A expressão \alert{grupos substituintes orgânicos} ou, simplesmente \alert{grupos orgânicos} é usada para designar qualquer grupo de átomos que apareça com freqüência nas moléculas orgânicas.
-\end{itemize}
-
-\begin{center}
-\begin{tabular}{lll}
-\chemfig{-CH_3} &  & \chemfig{-CH_2-CH_3}\\[0pt]
- &  & \\[0pt]
-\quad metil &  & \qquad    etil\\[0pt]
-\end{tabular}
-\end{center}
-
-
-\end{myex}
-\end{frame}
-
-
-\begin{frame}[allowframebreaks]{Grupos substituintes}
-\begin{longtblr}[theme=fancy,
-    caption = {Grupos substituintes orgânicos formados por carbono e hidrogênio},
-    %note{a} = {It is the first footnote.},
-    ]{
-        colspec = {c c c c }, colsep = 2mm, hlines = {2pt, white},
-        %row{odd} = {azure8}, row{even} = {gray8},
-        row{1,3,5,7,10,13,16} = {1.5em,azure3,fg=white,font=\bfseries\sffamily},
-        %row{12} = {bg=gray8, font=\bfseries},
-        %rowsep=.2cm,        
-    }
- \hline
-     % Radical & Estrutura & Radical & Estrutura   \\
-    \SetCell[c=4]{m,8cm} 1 carbono && \\ 
-    & metil &  & \chemfig{-CH_3}  \\ \hline
-    \SetCell[c=4]{m,8cm} 2 carbonos && \\   
-    & etil & \chemfig{-CH_2-CH_3} \\  \hline 
-    \SetCell[c=4]{m,8cm} 3 carbonos &&  \\ 
-    propril &  \chemfig{-CH_2-CH_2-CH_3}  & isopropil &  \chemfig{-CH([:-90]-CH_3)-CH_3}  \\ \hline 
-    \pagebreak
-     \SetCell[c=4]{m,8cm} 4 carbonos && \\ %\hline
-     %\pagebreak 
-    butil &  \chemfig{-CH_2|{(CH_2)_2}CH_3}  & isobutil &  \chemfig{-CH_2-CH([:-90]-CH_3)-CH_3} \\ \hline 
-    \emph{s}-butil (\emph{sec}-butil) &  \chemfig{-CH([:-90]-CH_3)-CH_2CH_3} & \emph{t}-butil (\emph{terc}-butil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_3}
-      \\ \hline 
-     \pagebreak
-    \SetCell[c=4]{m,8cm} 5 carbonos &&& \\
-     pentil &  \chemfig{-CH_2|{(CH_2)_3}CH_3} & isopentil &  \chemfig{-CH_2-CH_2-CH([:-90]-CH_3)-CH_3} \\  \hline
-     neopentil & \chemfig{-CH_2-C([:-90]-CH_3)([:90]-CH_3)-CH_3}  & \emph{t}-pentil (\emph{terc}-pentil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH_3}\\  \hline 
-      \pagebreak
-     \SetCell[c=4,]{m,8cm}Outros grupos & && \\
-      vinil ou etenil & \chemfig{-CH=CH_2}   & isopropenil & \chemfig{-C([:-90]-CH_3)=CH_2}\\ \hline
-      propenil & \chemfig{-CH=CH-CH_3}  & ali ou propen-2-il & \chemfig{-CH_2-CH=CH_2}\\ \hline 
-      \pagebreak
-   \SetCell[c=4,]{m,10cm} Aromáticos &&& \\
-    fenil & \chemfig{-(*6(-=-=-=))}  & naft-1-il & \chemfig{*6(-=(*6(-=-=(-)--))-=-=)}\\ \hline
-    benzil & \chemfig{-CH_2-(*6(-=-=-=))} & naft-2-il & \chemfig{*6(-=(*6(-=-(-)=--))-=-=)}\\
-      \hline 
-\end{longtblr}
-\end{frame}
-
-\begin{frame}[allowframebreaks]{Hidrocarbonetos Ramificados - Cadeia Principal}
-\begin{mybox}{Definição}
-\begin{itemize}
-\item Cadeia principal é a maior seqüência de carbonosque contenha as ligações duplas
-e triplas (se houver). Em caso de duas sequencias igualmente longas, é a mais
-ramificada. Os carbonos que não fazem parte da cadeia principal pertencem às ramificações.
-\end{itemize}
-
-\end{mybox}
-
-
-
-%%% 1 exemplo
-
-\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{1\textsuperscript{0} Exemplo}
- A cadeia principal é a maior sequencia de carbonos
-
-\vspace{.5cm}
-\schemestart
-\chemfig{H_3C-CH_2-CH([:-90]-CH_3)-CH_2-CH_2-CH_3}
-\arrow(.mid east--.mid west){->}[,1,thick]
-\chemfig{@{A}C-C-C([:-90]-@{C}C)-C-C-C{}@{B}}
-\chemmove{
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(C)]{}; 
-  \node[text width=3cm,blue] at (-1,.5) {Cadeia Principal};
-  \node[text width=3cm,red] at (-2,-1.2) {Ramificação};
-  }  
-\schemestop
-\end{bclogo}
-
-%%% 2 exemplo
-
-\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{2\textsuperscript{0} Exemplo}
-A cadeia principal nem sempre está na horizontal 
-
-\vspace{.5cm}
-\schemestart
-\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH([:-90]-CH_3)-CH([:90]-CH_2-CH_2([:0]-CH_3))-CH_2-CH_3}
-\arrow(.mid east--.mid west){->}[,1,thick]
-\chemfig{@{J}C-@{A}C([:-90]-C-C@{B})-C([:-90]-@{X}C)-@{Z}C([:90]-C-@{E}C([:0]-C@{H}))-@{Q}C-C@{R}}
-\chemmove{
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (Z)]{};
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(Z) (E)]{};
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(E) (H)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X)]{}; 
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(J)]{}; 
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Q) (R)]{}; 
-  \node[text width=3cm,blue] at (0.1,1) {Cadeia Principal};
-  \node[text width=3cm,red] at (-1,-1.2) {Ramificação};
-  }  
-\schemestop 
-
-
-\end{bclogo}
-
-%%% 3 exemplo
-
- \begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{3\textsuperscript{0} Exemplo}
-  No caso de duas ou mais sequências igualmente longas, a cadeia principal é a mais ramificada
-
-  \vspace{.3cm}
-  \schemestart
-  \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH([:-90]-CH([:0]-CH_3)-CH_3)-CH_2-CH_3}
-  \hspace{2cm}
-  \chemfig{@{A}C-C([:90]-@{G}C)([:-90]-@{H}C)-@{B}C@{X}([:-90]-C([:0]-@{F}C)-@{Z}C)-@{Q}C-C@{R}}
-  \chemmove{
-  %\node[text width=3cm,blue] at (2.0 ,0) (A) {buta-1,2-dieno};
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
-  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(X) (Z)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Q) (R)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G)]{};
-  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(H)]{};
-  \node[text width=3cm,blue] at (-.5,0.5) {\scriptsize cadeia principal};
-  \node[text width=3cm,red] at (1.8,-.1) {\scriptsize 4  Ramificações};
-  }
-  \schemestop
-  
-  \vspace{.3cm}
-  
-   \schemestart
-   \chemfig{@{A}C-C([:90]-@{F}C)([:-90]-@{G}C)-C([:-90]-@{X}C([:0]-C@{W})-C@{Y})-C-@{B}C}
-   \chemmove{
-   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X) (Y)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X) (W)]{}; 
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G)]{};
-   \node[text width=3.5cm,black] at (0,.5) {\scriptsize Não é cadeia principal};
-   \node[text width=3cm,red] at (-1,-2) {\scriptsize 3 Ramificações};
-    }
-   \schemestop
-   %%%
-   \hspace{3.5cm}
-   \schemestart
-   \chemfig{@{D}C-@{A}C([:90]-@{E}C)([:-90]-C@{B})-@{J}C([:-90]-C([:0]-@{F}C)-C@{M})-C-C@{K}}
-   \chemmove{
-   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(J) (K)]{};
-   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(J) (M)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (B)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (D)]{};
-   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (E)]{};
-   \node[text width=4.5cm,black] at (2.5,0) {\scriptsize Não é a cadeia principal};
-   \node[text width=3cm,red] at (-3,-0.5) {\scriptsize 2 Ramificações};  
-   }
-   \schemestop 
- 
-\end{bclogo}
-
-%%% 4 exemplo
- 
-
-\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{4\textsuperscript{0} Exemplo}
-\begin{itemize}
-\item Podem existir duas ou mais cadeias equivalentes, neste caso:
-\end{itemize}
-\vspace{.3cm}
-\schemestart
-\chemfig{H_3C-CH([:-90]-CH_3)-CH_2-CH_3}
-\arrow(nph.mid east--.south west){->}[45]
-\chemfig{@{A}C-C([:-90]-@{W}C)-C-C@{B}}
-\chemmove{
-\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(W)]{}; 
-\node[text width=3cm,blue] at (-.5,.5) {\small cadeia principal};
-\node[text width=3cm,red] at (0.3,-.7) {\small ramificação};
-}
-\arrow(@nph.mid east--.north west){->}[-45]
-\chemfig{@{Z}C-@{D}C([:-90]-C@{F})-C-C@{E}}
-\chemmove{
-\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(D) (E)]{};
-\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(D) (F)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Z)]{};
-\node[text width=3cm,blue] at (-.5,.5) {\small cadeia principal};
-\node[text width=3cm,red] at (-2,-.5) {\small ramificação};
-%  
-}
-\schemestop
-\end{bclogo}
-
-
-
-%%% 5 exemplo
-
-\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{5\textsuperscript{0} Exemplo}
-
-\schemestart
-\chemfig{H_2C=CH-CH([:-90]-CH_2-CH_2-CH_3)-CH([:-90]-CH_3)-CH_2-CH_3}
-\arrow(.mid east--.mid west){->}[,1,thick]
-\chemfig{@{A}C=C-C([:-90]-@{G}C-C-C@{H})-C([:-90]-@{F}C)-C-C@{B}}
-\chemmove{
-\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (H)]{};
-\node[text width=3.0cm,blue] at (-1.0,0.5) {cadeia principal};      
-}
-\schemestop 
-
-\vspace{1.2cm}
-
-\schemestart
-\chemfig{C=C-@{B}C([:-90]-C-C-C@{E})-C([:-90]-C)-C-C@{A}}
-\chemmove{
-\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
-\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(B) (E)]{};
-\node[text width=5.0cm,black] at (-2,-2.5) {\scriptsize Não é a cadeia principal pois, apesar de ser a mais longa não contém a \emph{dupla}};
-}
-\schemestop 
-\hspace{3.5cm}
-\schemestart
-\chemfig{@{A}C=C-@{B}C([:-90]-C-C-C@{E})-@{G}C([:-90]-C@{H})-C-C@{J}}
-\chemmove{
-\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
-\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(B) (E)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (H)]{};
-\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (J)]{};      
-\node[text width=5.0cm,black] at (-5,-.5) {\scriptsize Não é a cadeia principal pois, apesar de incluir a \emph{dupla} e ter o mesmo comprimento da cadeia principal, é menos ramificada};
-\node[text width=3.0cm,red] at (0.5,-.5) {1 ramificação};
-}
-\schemestop 
-
-\end{bclogo}
-\end{frame}
-
-
-\section{Nomeclatura}
-\label{sec:org9dfaf0d}
-
-\begin{frame}[label={sec:org823e319}]{Nomenclatura}
-\begin{myrule}{Regras}
-
-\begin{itemize}
-\item Localize a cadeia principal.
-
-\item Numere os carbonos da cadeia principal. Para decidir por qual extremidade deve começar a numeração, baseia-se nos seguintes critérios:
-
-\item Se a cadeia for \alert{insaturada}, comece pela extremidade que apresente \alert{insaturação} mais próxima a ela.
-
-\item Se a cadeia for \alert{saturada}, comece pela extremidade que tenha uma \alert{ramificação} mais próxima a ela.
-
-\item Escreva o número de localização da ramificação e, a seguir, separando com um hífen, o nome do grupo orgânico que corresponde à ramificação.
-
-\item Finalmente, escreva o nome do hidrocarboneto correspondente à cadeia principal, separando-o do nome da ramificação por um hífen
-\end{itemize}
-
-\end{myrule}
-\end{frame}
-
-
-\section{Nomenclatura Exemplos}
-\label{sec:org80551ef}
-
-\begin{frame}[allowframebreaks]{Nomenclatura Exemplos}
-%% 1
-\begin{myrule}{Exemplo 1}
-\vspace{1cm}
-\schemestart
-\chemname{\chemfig{H_3\mcfabove{C}{\mcfatomno{5}}-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{3}}H_2-\mcfabove{C}{\mcfatomno{2}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{1}}H_3}}{\alert{ 2-metil-pentano}}
-\chemmove{
-\node[text width=6cm,black] at (4,-1) {4-metil-pentano está incorreto};  
-\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Extremidade mais próxima da ramificação};
-    }
-\schemestop
-\end{myrule}
-
-%%% 2
-\begin{myrule}{Exemplo 2}
-\vspace{1cm}
-\schemestart
-\chemname{
-\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_2-\mcfabove{C}{\mcfatomno{6}}H_3}}{\alert{3-metil-hexano}}
-\chemmove{
-\node[text width=6cm,black] at (4,-1) {4-metil-hexano está incorreto};  
-\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Extremidade mais próxima da ramificação};
-    }
-\schemestop
-\end{myrule}
-
-%% 3
-\begin{myrule}{Exemplo 3}
-\vspace{1cm}
-\schemestart
-\chemname{
-\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}}{\alert{3-metil-pentano}}
-\chemmove{
-%\node[text width=6cm,black] at (4,-1) {4-metil-hexano está incorreto};  
-\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {A numeração pode ser em qualquer sentido};
-    }
-\schemestop
-\end{myrule}
-%% 4
-\begin{myrule}{Exemplo 4}
-Se houver mais de um substituinte, deve-se numerar a cadeia principal começando pela extremidade da qual haja uma ramificação mais próxima.
-
-\vspace{1.5cm}
-\schemestart
-\chemname{
-\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}}{\alert{2,3-dimetil-pentano}}
-\chemmove{
-\node[text width=5cm,ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Segue e menor numeração para o radicais usar vírgula para ponto e hífen para os nomes};
-    }
-\schemestop
-\end{myrule}
-
-%%% 5
-\begin{myrule}{Exemplo 5}
-\vspace{1cm}
-\schemestart
-\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{\hspace{.2cm}2}}([:-90]-CH_3)([:90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H_2-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}
-\chemmove{
- \node[text width=3cm,black] at (3.4 ,0) (A) {\alert{2,2-dimetil-pentano}};
- \draw[|->] (2.1,-.1)--(2.1,-0.8); % Line 1
-\node[text width=6cm,black] at (4,-1.3) {Note a repetição da númeração \\  use \emph{di} para indicar dois radicais idênticos}; 
-    }
-\schemestop
-\vspace{1cm}
-\end{myrule}
-
-%%% 6
-\begin{myrule}{Exemplo 6}
-\vspace{1cm}
-\schemestart
-\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{\hspace{.2cm}2}}([:-90]-CH_3)([:90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}
-\chemmove{
- \node[text width=7cm,black] at (4.4 ,0) (A) {\alert{2,2,3-dimetil-pentano}};
- \node[text width=7cm,black] at (4.4 ,-1) (A) {(3,3,4-trimetil-pentano está incorreto)};
-}
-\schemestop
-\end{myrule}
-%%%%% 7 
-\begin{myrule}{Exemplo 7}
-\vspace{1cm}
-\schemestart
-\chemfig{(!\nobond\chemabove[1.2ex]{}{1}{})(!\nobond\chemabove[3.9ex]{}{4}{})CH_3-(!\nobond\chemabove[1.2ex]{}{2}{})(!\nobond\chemabove[3.9ex]{}{3}{})CH([:-90]-CH_3)-(!\nobond\chemabove[1.2ex]{}{3}{})(!\nobond\chemabove[3.9ex]{}{2}{})CH([:-90]-CH_3)-(!\nobond\chemabove[1.2ex]{}{4}{})(!\nobond\chemabove[3.9ex]{}{1}{})CH_3}
-\chemmove{
-\node[text width=3cm,black] at (-1 ,-1.5) (A) {\alert{2,3-dimetil-butano}};
-\node[text width=5cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Ambas as numerações são equivalentes};
-    }
-\schemestop
-\vspace{1.4cm}
-\end{myrule}
-
-%%%% 8 
-
-\begin{myrule}{Exemplo 8}
-
-\vspace{1cm}
-\schemestart
-\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH_2-CH([:90]-CH_2-CH_2-CH_3)-CH_2-CH_3}
-\chemmove{
-%% Enumerate cadeia
-\node[text width=1cm,blue] at (-4.7 ,-1.4) (A) {\scriptsize 1}; % C1
-\node[text width=1cm,blue] at (-4.7 ,-.6) (A) {\scriptsize 2}; % C2
-\node[text width=1cm,blue] at (-4.3 ,0.4) (A) {\scriptsize 3}; % C3
-\node[text width=1cm,blue] at (-3.3 ,0.4) (A) {\scriptsize 4}; % C4
-\node[text width=1cm,blue] at (-2.5 ,0.3) (A) {\scriptsize 5}; % C5
-\node[text width=1cm,blue] at (-2.5 ,0.9) (A) {\scriptsize 6}; % C6
-\node[text width=1cm,blue] at (-2.5 ,1.5) (A) {\scriptsize 7}; % C7
-\node[text width=1cm,blue] at (-2.5 ,2.3) (A) {\scriptsize 8}; % C8
-%%% Fim numera cadeia
-\node[text width=9cm,black] at (5.6 ,1) (A) {\alert{5-{\bfseries{\color{black}{e}}}til-3-{\bfseries{\color{black}{m}}}etil-octano}};
-%% Seta Nome
-\draw[<-] (1.5, 0.8)--(1.5,0)--(4,0); % seta do e
-\draw[<-] (2.4, 0.8)--(2.4,0); % seta do m
-\node[text width=3cm,black] at (5.8 ,-0) {ordem alfabética: ``e'' vem antes de ``m''};
-\node[text width=3cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4.5,-1)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade que tem a ramificação mais próxima};
-    }
-\schemestop
-\end{myrule}
-
-%%%% 9
-\begin{myrule}{Exemplo 9}
-\vspace{1cm}
-\schemestart
-\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH([:90]-CH_3)-C([:-90]-CH([:0]-CH_3)-CH_3)([:90]-CH_2-CH_2-CH_3)-CH_2-CH_3}
-\chemmove{
-%% Enumerate cadeia
-\node[text width=1cm,blue] at (-4.5 ,-1.4) (A) {\scriptsize 1}; % C1
-\node[text width=1cm,blue] at (-4.5 ,-.6) (A) {\scriptsize 2}; % C2
-\node[text width=1cm,blue] at (-4.3 ,0.4) (A) {\scriptsize 3}; % C3
-\node[text width=1cm,blue] at (-3.3 ,0.4) (A) {\scriptsize 4}; % C4
-\node[text width=1cm,blue] at (-2.5 ,0.3) (A) {\scriptsize 5}; % C5
-\node[text width=1cm,blue] at (-2.5 ,0.9) (A) {\scriptsize 6}; % C6
-\node[text width=1cm,blue] at (-2.5 ,1.5) (A) {\scriptsize 7}; % C7
-\node[text width=1cm,blue] at (-2.5 ,2.3) (A) {\scriptsize 8}; % C8
-%%% Fim numera cadeia
-\node[text width=9cm,black] at (5.6 ,1) (A) {\alert{5-{\bfseries{\color{black}{e}}}til-5-{\bfseries{\color{black}{i}}}spopropil-3,4-di{\bfseries{\color{black}{m}}}etil-octano}};
-%% Seta Nome
-\draw[<-] (1.5, 0.8)--(1.5,0)--(6,0)--(6,-0.5); % seta do e
-\draw[<-] (2.3, 0.8)--(2.3,0); % seta do i
-\draw[<-] (4.8, 0.8)--(4.8,0); % seta do m
-\node[text width=4cm,black] at (5.2 ,-.9) {ordem alfabética: ``e'' vem antes de ``i'' que vem antes de ``m''};
-    }
-\schemestop
-\end{myrule}
-
-
-
-\begin{myrule}{Exemplo 10}
-\vspace{.5cm}
- \schemestart
- \chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{4}}-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
- \chemmove{
- \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
- \node[text width=4cm,red] at (7.7 ,0) {3-metil-but-1-eno};
- \draw[<-] (5.8, -.2)--(5.8, -1);
- \node[text width=.5cm,black] at (5.3 ,-1.3) {localiza};
- \node[text width=3cm,black] at (5.8 ,-1.7) {a ramificação};
- \draw[<-] (7.6, -.2)--(7.6, -1);
- \node[text width=.5cm,black] at (7.4 ,-1.3) {localiza};
- \node[text width=3cm,black] at (8.8 ,-1.7) {a insaturação};
- \node[text width=4cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
-}
-\schemestop
-\vspace{2cm}
-%
-\end{myrule}
-%%%% Ex. 11
-\begin{myrule}{Exemplo 11}
- \vspace{.5cm}
- \schemestart
- \chemfig{@{A}\mcfabove{C}{\mcfatomno{5}}H_3-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
- \chemmove{
- \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
- \node[text width=4cm,red] at (5.7 ,0) {3-metil-pent-1-eno};
- \draw[<-] (3.8, -.2)--(3.8, -1);
- \node[text width=.5cm,black] at (3.5 ,-1.3) {localiza};
- \node[text width=3cm,black] at (4.1 ,-1.7) {a ramificação};
- \draw[<-] (5.7, -.2)--(5.7, -1);
- \node[text width=.5cm,black] at (5.5 ,-1.3) {localiza};
- \node[text width=3cm,black] at (6.5 ,-1.7) {a insaturação};
- \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
-}
-\schemestop
-\vspace{3cm}
-\end{myrule}
-
-
-%%% Ex 12
-
-\begin{myrule}{Exemplo 12}
- \vspace{.5cm}
- \schemestart
- \chemfig{@{A}\mcfabove{C}{\mcfatomno{5}}H_3-\mcfabove{C}{\mcfatomno{4}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
- \chemmove{
- \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
- \node[text width=4cm,red] at (3.7 ,0) {3,4-dimetil-pent-1-eno};
- %\draw[<-] (3.8, -.2)--(3.8, -1);
- %\node[text width=.5cm,black] at (3.5 ,-1.3) {localiza};
- %\node[text width=3cm,black] at (4.1 ,-1.7) {a ramificação};
- %\draw[<-] (5.7, -.2)--(5.7, -1);
- %\node[text width=.5cm,black] at (5.5 ,-1.3) {localiza};
- %\node[text width=3cm,black] at (6.5 ,-1.7) {a insaturação};
- \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
-}
-\schemestop
-\vspace{2cm}
-\end{myrule}
-
-
-%%% Ex 13
-
-\begin{myrule}{Exemplo 13}
- \vspace{.5cm}
- \schemestart
- \hspace{4cm}\chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}~\mcfabove{C}{\mcfatomno{3}}-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{6}}H_3@{B}}
- \chemmove{
- \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
- \node[text width=8cm,red] at (5,0){5-metil-hex-2-ino};
- \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]-8,-1.5) {\small Extremidade mais próxima da insaturação};
-}
-\schemestop
-\vspace{.5cm}
-\end{myrule}
-
-\begin{myrule}{Exemplo 14}
- \vspace{.5cm}
- \schemestart
- \hspace{4cm}\chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}~\mcfabove{C}{\mcfatomno{3}}-\mcfabove{C}{\mcfatomno{4}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{5}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{6}}H_3@{B}}
- \chemmove{
- \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
- \node[text width=8cm,red] at (5,0){4,5-dimetil-hex-2-ino};
- \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]-8,-1.5) {\small Extremidade mais próxima da insaturação};
-}
-\schemestop
-\vspace{.5cm}
-\end{myrule}
-
-
- \begin{myrule}{Exemplo 15}
- \vspace{.5cm}
- \schemestart
- \chemfig{H_3C-C([:90]=CH_2)-CH([:-90]-CH_2-CH_3)-CH_3}
- \chemmove{
- \node[text width=1cm,blue] at (-2.1 ,.8) {\scriptsize 1}; % C1
- \node[text width=1cm,blue] at (-2.1 ,.2) {\scriptsize 2}; % C2
- \node[text width=1cm,blue] at (-1.2 ,.3) {\scriptsize 3}; % C3
- \node[text width=1cm,blue] at (-1.4 ,-.6) {\scriptsize 4}; % C4
- \node[text width=1cm,blue] at (-1.4 ,-1.3) {\scriptsize 5}; % C5
- \node[text width=8cm,red] at (5,0){2,3-dimetil-pent-1-eno};
-}
- \schemestop
- \end{myrule}
-\end{frame}
-
-
-\section{Hidrocarbonetos cadeia mista}
-\label{sec:orged81de4}
-
-\begin{frame}[label={sec:org01be5aa}]{Hidrocarbonetos cadeia mista}
-\begin{itemize}
-\item Quando um hidrocarboneto possui cadeia mista, a nomenclatura é semelhante as cadeias ramificadas abertas. Veja os exemplos.
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
 \end{itemize}
 
 
 
 \begin{bclogo}[couleur=blue!40 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Isomerização dos alcanos}
 \begin{center}
-<<<<<<< HEAD
 \begin{tikzpicture}
 	\node[draw=none] at (0,0) {\chemfig{-[:300](-[:240])=(-[:300])-[:60]}};
 	\node[draw=none] at (1.5,0) {+};
@@ -927,138 +372,10 @@ Se houver mais de um substituinte, deve-se numerar a cadeia principal começando
 
 Onde \alert{AB} =  \ch{H2}, HX, \ch{H2O}, \ch{X2}, ROH 
 \end{bclogo}
-=======
-\chemname{\chemfig{*5(--(-CH_3)---)}}{metil-ciclo-pentano}\af
-\chemname{\chemfig{**6(----(-CH_3)--)}}{metil-benzeno} \af 
-\chemname{\chemfig{**6(--(!\nobond\chembelow[0.5ex]{}{3}{})(-CH_3)-(!\nobond\chemabove[1.4ex]{2}{})-(!\nobond\chemabove[0.2ex]{}{\quad 1})(-CH_3)--)}}{1-3-dimetil-benzeno}
- \end{center}
-\end{frame}
-
-\begin{frame}[label={sec:org4962994}]{Hidrocarbonetos cadeia mista}
-\begin{itemize}
-\item Quando há dois substituintes diferentes, eles devem ser citados em \alert{ordem alfabética. O número 1 é dado ao subtituinte citado primeiro} de acordo com a ordem alfabética.
-\end{itemize}
-
-
-\schemestart
-\chemfig{**6(---(-CH_3)-(-CH_2([:0]-CH_3))--)} \af 
-\chemfig{*5(--(-CH_2-CH_3)--(-H_3C)-)} \af
-\chemfig{CH_2([:90]-(*6(---(-CH_3)---)))-CH_2-CH_3}
-\chemmove{
-	\node[text width=1cm,blue] at (-12.8 ,.8) {\scriptsize 1}; % C1	
-	\node[text width=1cm,blue] at (-12.3, .38) {\scriptsize 2}; % C1
-	\node[text width=5cm,black] at (-11.5 ,-1) {1-\alert{e}til-2-\alert{m}etil-benzeno}; % C1	
-	\node[text width=1cm,blue] at (-8.2 ,.27) {\scriptsize 1}; % C1		
-	\node[text width=1cm,blue] at (-7.57 ,.72) {\scriptsize 2}; % C1
-	\node[text width=1cm,blue] at (-7.25 ,.01) {\scriptsize 3}; % C1
-	\node[text width=5cm,black] at (-7.3 ,-1) {1-\alert{e}til-3-\alert{m}etil-ciclo-pentano}; % C1
-	\node[text width=1cm,blue] at (-2.35 ,1.8) {\scriptsize 1}; % C1
-	\node[text width=1cm,blue] at (-1.9 ,1.56) {\scriptsize 2}; % C1
-	\node[text width=1cm,blue] at (-1.9 ,1.0) {\scriptsize 3};
-	\node[text width=1cm,blue] at (-2.35 ,0.59) {\scriptsize 4};
-	\node[text width=5cm,black] at (-1.7 ,-1) {1-\alert{m}etil-4-\alert{p}ropil-ciclo-hexano}; % C1
-	\draw[->] (-13.6,-2.)--(-13.6,-1.1);
-	\draw[->] (-12.6,-2.)--(-12.6,-1.1);
-  \node[text width=6cm,col8] at (-11.6 ,-2.5) {ordem alfabética: ``e'' antes de ``m''};
-  	\draw[->] (-3.8,-2.)--(-3.8,-1.1);
-  	\draw[->] (-2.7,-2.)--(-2.7,-1.1);
-  \node[text width=6cm,col8] at (-1.7 ,-2.5) {ordem alfabética: ``m'' antes de ``p''};
-}
-\schemestop
-\end{frame}
-
-\begin{frame}[label={sec:orge1be8f2}]{}
-\begin{itemize}
-\item Se houver mais de dois substituintes, eles serão citados em \alert{ordem alfabética. O número 1 deve ser dado ao substituinte que permitir que um segundo substituintes receba o menor número possível}
-\end{itemize}
-
-\hspace{.5cm}\chemname{\chemfig{CH_3-[:273,,1]-[:327]-[:255]-[:183]-[:111](-[:39])(-[:223,,,2]H_3C)-[:155,,,2]H_3C}}{1,1,2-trimetil-ciclo-pentano}\af 
-\chemname{\chemfig{*6((-CH_2([:180]-H_3C))--(-CH_3)-(-([:0]CH_2-CH_2-CH_3))---)}}{4-etil-2-metil-1-propil-ciclo-hexano}\\
-\vspace{.2cm}
-\chemname{\chemfig{**6(-(-CH_3)--(-CH_3)-(-CH_3)--)}}{1,2,4-trimetil-benzeno} \af \af 
-\chemname{\chemfig{**6(-(-C_2H_5)--(-C_2H_5)-(-CH_3)--)}}{2,4-dietil-1-metil-benzeno}
-\chemmove{
-	\node[text width=1cm,blue] at (-6.3 ,3.2) {\scriptsize 1}; % C1	
-	\node[text width=1cm,blue] at (-5.8 ,3.5) {\scriptsize 2}; % C1	
-	%%%
-	\node[text width=1cm,blue] at (-0.28 ,4.65) {\scriptsize 1}; % C1
-	\node[text width=1cm,blue] at (-0.11 ,3.9) {\scriptsize 2}; % C1
-	\node[text width=1cm,blue] at (-0.68 ,3.36) {\scriptsize 3}; % C1
-	\node[text width=1cm,blue] at (-1.3 ,3.9) {\scriptsize 4}; % C1
-	%%%%
-	\node[text width=1cm,blue] at (-7.3 ,0.98) {\scriptsize 1}; % C1
-	\node[text width=1cm,blue] at (-6.98 ,0.66) {\scriptsize 2}; % C1
-	\node[text width=1cm,blue] at (-6.8 ,0.1) {\scriptsize 3}; % C1
-	\node[text width=1cm,blue] at (-7.3 ,-0.4) {\scriptsize 4}; % C1
-	%%%
-	\node[text width=1cm,blue] at (-1.2 ,0.98) {\scriptsize 1}; % C1
-	\node[text width=1cm,blue] at (-0.91 ,0.66) {\scriptsize 2}; % C1
-	\node[text width=1cm,blue] at (-0.78 ,0.1) {\scriptsize 3}; % C1
-	\node[text width=1cm,blue] at (-1.2 ,-0.4) {\scriptsize 4}; % C1
-	\node[text width=4cm,ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-0,0.8)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,-1) {\small No exemplo ao lado -\ch{C2H5} é uma maneira de representar o grupo etil $\rm -CH_2-CH_3$};
-}
-\end{frame}
-
-\begin{frame}[label={sec:orgf60e435}]{}
-\begin{itemize}
-\item Quando uma molécula de benzeno que contém \alert{dois} grupos substituintes ligados ao anel, podemos usar o prefixo \emph{orto}, \emph{meta} e \emph{para}.
-\end{itemize}
-
-\begin{bclogo}[logo=\bcattention, noborder=true, barre=none]{Atenção}
-Os prefixos \emph{orto}, \emph{meta} e \emph{para} podem ser \alert{utilizados apenas quando um anel benzênico possuir dois grupos ligados a ele ligados:}\\[0pt]
-
-\(\bullet\) \emph{orto} \alert{indica 1, 2}; \quad \(\bullet\) meta \alert{indica 1, 3}; \quad \(\bullet\) \emph{para} \alert{indica 1, 4}
-\end{bclogo}
-
-\chemname{\chemfig{**6(---(-CH_3)-(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{orto:}indica posição 1,2}} \af  
-\chemname{\chemfig{**6(--(-CH_3)--(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{meta:}indica posição 1,3}} \af
-\chemname{\chemfig{**6(-(-CH_3)---(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{para:}indica posição 1,4}} 
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd5c1ab4}]{Cadeia Mista - Nomenclatura trivial}
-\begin{itemize}
-\item Alguns exemplos de nomes triviais de hidrocarbonetos aromáticos são: \emph{tolueno, orto-xileno, meta-xileno} e \emph{para-xileno}.
-\end{itemize}
-
-
-\chemname{\chemfig{**6(---(-CH_3)---)}}{tolueno} \af  
-\chemname{\chemfig{**6(---(-CH_3)-(-CH_3)--)}}{\emph{orto}-xileno} \af  
-\chemname{\chemfig{**6(--(-CH_3)--(-CH_3)--)}}{\emph{meta}-xileno} \af
-\chemname{\chemfig{**6(-(-CH_3)---(-CH_3)--)}}{\emph{para}-xileno} 
-\end{frame}
-
-
-\begin{frame}[label={sec:org5747c9f}]{Cadeis Mistas - Outros exemplos}
-\chemname{\chemfig{**6(---(-CH_3)-(-C_2H_5)--)}}{\emph{orto}-etil-metil-benzeno} \af  
-\chemname{\chemfig{**6(--(-CH_3)--(-C_2H_5)--)}}{\emph{meta}-etil-metil-benzeno} \af
-\chemname{\chemfig{**6(-(-CH_3)---(-C_2H_5)--)}}{\emph{para}-etil-metil-benzeno} \af
-\chemname{\chemfig{**6(-(-C_2H_5)--(-C_2H_5)-(-CH_3)--)}}{2,4-dietil-1-metil-benzeno} 
-
-\begin{itemize}
-\item Os prefixos \emph{\alert{orto}}, \emph{\alert{meta}} e \emph{\alert{para}} vêm do grego e podem ser traduzidos, respectivamente, por \emph{''diretamente''}, \emph{``depois de''} e \emph{``mais longe de''}
-\end{itemize}
-\end{frame}
-
-
-
-
-
-\begin{frame}[label={sec:org2da3ba0}]{Fim da Aula}
-\begin{tikzpicture}
-\node[graduate,sword, devil, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
-\end{tikzpicture}
-\begin{center}
-\begin{tabular}{ccc}
-Download Aula & & Lista de Exercícios \\
- \qrcode[height=2in]{https://mark.nl.tab.digital/s/yWAtd5C8mjKjdQa} & & \qrcode[height=2in]{https://mark.nl.tab.digital/s/6kSsDYwW4icCK9X}\\
- \end{tabular}
- \end{center}
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
-\end{frame}
-
-
-\begin{frame}[label={sec:org4985709}]{}
+\begin{frame}[label={sec:orgfdedb64}]{}
 \vspace{-.5cm}
 \begin{itemize}
 \item O termo \alert{carbocátion} foi sugerido por George A. Olah para designar qualquer espécie catiônica do carbono. Os carbocátions têm deficiência de elétrons, com apenas 6 elétrons na camada de valência e, por causa disto, são ácidos de Lewis.
@@ -1078,7 +395,7 @@ Download Aula & & Lista de Exercícios \\
 \end{bclogo}
 \end{frame}
 
-\begin{frame}[label={sec:orgcf241db}]{Adição de hidrogênio ou higrodenação catalítica}
+\begin{frame}[label={sec:org1302957}]{Adição de hidrogênio ou higrodenação catalítica}
 \begin{itemize}
 \item Consiste na reação do alceno com gás \ch{H2}, que é catalisada por níquel (\alert{Ni}), platina (\alert{Pt}) ou paládio (\alert{Pd}).
 \item Atuação do catalisador na hidrogenação: adsorve tanto as moléculas de \ch{H2} como do alceno, provocando o enfraquecimento das ligações, tornando a reação mais fácil.
@@ -1125,24 +442,90 @@ Download Aula & & Lista de Exercícios \\
 \end{bclogo}
 \end{frame}
 
+\begin{frame}[label={sec:orgaa69c32}]{}
+\begin{itemize}
+\item Uma aplicação industrial da hidrogenação catalítica é na fabricação de margarinas a partir de óleos vegetais.
+\item Óleos Vegetais: misturas de ésteres do glicerol com ácidos graxos. Tais ésteres são denominados \alert{triacilglicerídeos}.
+\end{itemize}
 
-\begin{frame}[label={sec:org99a8d53}]{Adição de halogênios}
+
+\begin{bclogo}[couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Exemplo de triacilglicerídeo}
+\definesubmol{r1}{{[}CH_2{]}_7CH=CHCH_2CH=CHCH_2CH=CHCH_2CH_3}
+\definesubmol{r2}{{[}CH_2{]}_7CH=CHCH_2CH=CH{[}CH_2{]}_4CH_3}
+\definesubmol{r3}{{[}CH_2{]}_7CH=CH{[}CH_2{]}_7CH_3}
+\chemfig[atom sep=2em]{H-C(-[2,2]C(-[4]H_2)-O-C(=[2]O)-!{r1})(-[6,2]C(-[4]H_2)-O-C(=[2]O)-!{r3})-O-C(=[2]O)-!{r2}}
+\end{bclogo}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgeb61786}]{}
+\begin{itemize}
+\item Com a hidrogenação parcial das ligações duplas dos triacilglicerídeos, o óleo vegetal é convertido em um material de consistência pastosa denominado \alert{margarina}.
+
+\begin{center}
+\includegraphics[scale=0.05]{QO/ReacoesOrganicas/trigli3D.png}
+\end{center} \par
+\begin{center}
+\includegraphics[scale=0.05]{QO/ReacoesOrganicas/triglimono.png}
+\end{center}
+\end{itemize}
 \end{frame}
 
 
 
-\begin{frame}[label={sec:orga995f57}]{Adição de haletos de hidrogênio (HX)}
+\begin{frame}[label={sec:org8db0384}]{Adição de halogênios}
+\begin{bclogo}[couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de halogênios}
+
+
+\schemestart
+%\chemfig{@{a4}H_2C=C@{a3}H_2}
+\chemfig{@{a4}C(-[3]H)(-[5]H)=@{a3}C(-[1]H)-[7]H}
+\qquad + \qquad 
+\chemfig{@{a2}C{\ell}-@{a1}C{\ell}} 
+\arrow 
+\chemfig{H-C([:90]-C{\ell})([:-90]-H)-C([:90]-C{\ell})([:-90]-H)-H}
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt](a1) ..controls +(300:7mm) and +(10:5mm)..(a3);
+\draw[shorten >=2pt](a2) ..controls +(110:15mm) and +(90:7mm)..(a4);
+}
+\schemestop
+\end{bclogo}
+\end{frame}
+
+\begin{frame}[label={sec:org28e4dab}]{Adição de haletos de hidrogênio (HX)}
+\begin{bclogo}[couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de haletos}
+
+
+
+\schemestart
+\chemfig{@{a4}C(-[3]H)(-[5]H)=@{a3}C(-[1]H)-[7]H}
+\qquad + \qquad 
+\chemfig{@{a2}H-@{a1}C{\ell}} 
+\arrow 
+\chemfig{H-C([:90]-H)([:-90]-H)-C([:90]-C{\ell})([:-90]-H)-H}
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt](a1) ..controls +(300:7mm) and +(10:5mm)..(a3);
+\draw[shorten >=2pt](a2) ..controls +(110:15mm) and +(90:7mm)..(a4);
+}
+\schemestop
+\end{bclogo}
 \end{frame}
 
 
-\begin{frame}[label={sec:org5e4e540}]{Adição de água}
+\begin{frame}[label={sec:org24ebe71}]{Adição de água}
+\begin{bclogo}[couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de água}
+
+\end{bclogo}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgef9c638}]{Regra de Markovnikov}
+
+\begin{frame}[label={sec:org44b907a}]{Regra de Markovnikov}
 \end{frame}
+
+
 
 
 \section{Alcinos}
-\label{sec:org7417e5f}
+\label{sec:orgdce2ebf}
 \end{document}
